testing: implemented silhouette_score

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "fc88756a-6621-419a-bd5b-77936d6debc7",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "48140c79-85d8-42bb-b86a-b6fd275c3244",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
        "       [-3.34841515,  8.70507375]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,17 +136,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "794385dc-3bab-4305-a1c0-7ceb157994ff",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x77b7c43c90>"
+       "<matplotlib.collections.PathCollection at 0x726788cc90>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -194,6 +194,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "769d4a42-b8c2-4493-896e-4ed94a18d610",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "2eb86f41-93d1-494d-8ae3-27ffaf910d50",
    "metadata": {},
@@ -201,7 +211,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(0.8469881221532085)"
+       "0.8469881221532085"
       ]
      },
      "execution_count": 5,
@@ -210,8 +220,13 @@
     }
    ],
    "source": [
+    "start = time.time()\n",
     "res = silhouette_score(X, predicted)\n",
-    "res"
+    "end = time.time()\n",
+    "print(end - start)\n",
+    "res\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -233,7 +248,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8"
+       "1.03749802860471"
       ]
      },
      "execution_count": 7,
@@ -242,9 +257,20 @@
     }
    ],
    "source": [
+    "start = time.time()\n",
     "res = rs.silhouette_score(X,predicted)\n",
+    "end = time.time()\n",
+    "print(end - start) # \n",
     "res"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d09c0f6-82a0-4d3c-870b-4e620b3f3f7f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
