--- a/main.ipynb
+++ b/main.ipynb
@@ -143,7 +143,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x726788cc90>"
+       "<matplotlib.collections.PathCollection at 0x745e4cb510>"
       ]
      },
      "execution_count": 3,
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "769d4a42-b8c2-4493-896e-4ed94a18d610",
    "metadata": {},
    "outputs": [],
@@ -204,17 +204,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "2eb86f41-93d1-494d-8ae3-27ffaf910d50",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.025064945220947266\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "0.8469881221532085"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "e42b0b99-d5eb-4fb9-a221-3aae3e2d29da",
    "metadata": {},
    "outputs": [],
@@ -241,33 +248,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "c283c4e8-08a0-47e0-b48d-40d79083f03e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start = time.time()\n",
+    "res = rs.silhouette_score(X,predicted)\n",
+    "end = time.time()\n",
+    "#print(end - start)\n",
+    "# res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1d09c0f6-82a0-4d3c-870b-4e620b3f3f7f",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.008135557174682617\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "1.03749802860471"
+       "0.8515734737937203"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "start = time.time()\n",
-    "res = rs.silhouette_score(X,predicted)\n",
-    "end = time.time()\n",
-    "print(end - start) # \n",
+    "print(end - start)\n",
     "res"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d09c0f6-82a0-4d3c-870b-4e620b3f3f7f",
+   "id": "d86d40ac-edde-428e-99be-de5f35a56b81",
    "metadata": {},
    "outputs": [],
    "source": []
