testing2: implemented calinski_harabasz_score

--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "from sklearn.datasets import make_blobs\n",
     "from sklearn.cluster import KMeans\n",
-    "from sklearn.metrics import silhouette_score,davies_bouldin_score\n",
+    "from sklearn.metrics import silhouette_score,davies_bouldin_score,calinski_harabasz_score\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
@@ -226,6 +226,34 @@
    "source": [
     "start = time.time()\n",
     "res = rs.davies_bouldin_score(X, predicted)\n",
+    "end = time.time()\n",
+    "print(end - start)\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74feded8-e892-4ecf-8dcd-f4e52801e96e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start = time.time()\n",
+    "res = calinski_harabasz_score(X, predicted)\n",
+    "end = time.time()\n",
+    "print(end - start)\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efd45c28-007b-4989-b27d-ca6aad8741ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start = time.time()\n",
+    "res = rs.calinski_harabasz_score(X, predicted)\n",
     "end = time.time()\n",
     "print(end - start)\n",
     "res"
