testing2: implemented c-index

--- a/main.ipynb
+++ b/main.ipynb
@@ -37,7 +37,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fa3c9362540>"
+       "<matplotlib.collections.PathCollection at 0x740713c03d10>"
       ]
      },
      "execution_count": 3,
@@ -89,6 +89,35 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "c634098a-6788-4886-b11e-437bf0d88660",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 0 ns, sys: 3 ms, total: 3 ms\n",
+      "Wall time: 2.21 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.15222055031451376"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time rs.c_index(X, predicted)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "5e85b025-356a-438c-84e0-99be0049826e",
    "metadata": {},
    "outputs": [
@@ -96,48 +125,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "My score: silhouette_score duration: 0.0025930404663085938 result: 0.8469881221532084\n",
-      "Scikit score: silhouette_score duration: 0.0013256072998046875 result: 0.8469881221532085\n",
-      "\n",
-      "\n",
-      "My score: davies_bouldin_score duration: 0.00012493133544921875 result: 0.07981770856709129\n",
-      "Scikit score: davies_bouldin_score duration: 0.0014607906341552734 result: 0.21374667882527568\n",
-      "\n",
-      "\n",
-      "My score: calinski_harabasz_score duration: 0.00044083595275878906 result: 1778.0880985088445\n",
-      "Scikit score: calinski_harabasz_score duration: 0.0005340576171875 result: 1778.0880985088447\n",
+      "CPU times: user 1.69 ms, sys: 198 μs, total: 1.89 ms\n",
+      "Wall time: 1.78 ms\n",
+      "Scikit score: davies_bouldin_score result: 0.21374667882527568\n",
+      "CPU times: user 1.85 ms, sys: 0 ns, total: 1.85 ms\n",
+      "Wall time: 2.07 ms\n",
+      "My score: c_index result: 0.15222055031451376\n",
       "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "scikit_funcs = [silhouette_score,davies_bouldin_score,calinski_harabasz_score]\n",
-    "my_funcs = [rs.silhouette_score,rs.davies_bouldin_score,rs.calinski_harabasz_score]\n",
+    "scikit_funcs = [davies_bouldin_score]\n",
+    "my_funcs = [rs.c_index]\n",
     "for (func,my_func) in zip(scikit_funcs,my_funcs):\n",
-    "    \n",
-    "    start1 = time.time()\n",
-    "    res1 = my_func(X, predicted)\n",
-    "    end1 = time.time()\n",
-    "    print(f\"My score: {my_func.__name__} duration: {end1 - start1} result: {res1}\")\n",
-    "    \n",
-    "    \n",
-    "    start2 = time.time()\n",
-    "    res2 = func(X, predicted)\n",
-    "    end2 = time.time()\n",
-    "    print(f\"Scikit score: {func.__name__} duration: {end2 - start2} result: {res2}\")\n",
+    "    %time res2 = func(X, predicted)\n",
+    "    print(f\"Scikit score: {func.__name__} result: {res2}\")\n",
+    "         \n",
+    "    %time res1 = my_func(X, predicted)\n",
+    "    print(f\"My score: {my_func.__name__} result: {res1}\")\n",
     "    \n",
     "    \n",
     "    print(\"\\n\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7cd1a31b-c1b8-459a-ad7f-43e646c00daf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
