testing2: fixed  c-index calculation error

--- a/main.ipynb
+++ b/main.ipynb
@@ -24,7 +24,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, _ = make_blobs(random_state=42)\n",
+    "rstate = 42\n",
+    "X, _ = make_blobs(random_state=rstate)\n",
     "#X"
    ]
   },
@@ -37,7 +38,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x740713c03d10>"
+       "<matplotlib.collections.PathCollection at 0x7491bd727770>"
       ]
      },
      "execution_count": 3,
@@ -68,11 +69,11 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 2, 0, 2, 1, 2, 0, 2, 2, 0, 0, 1, 1, 0, 0, 1, 1, 0, 1, 1, 0, 1,\n",
-       "       1, 0, 0, 0, 2, 1, 1, 1, 1, 2, 2, 1, 0, 0, 0, 0, 2, 2, 1, 0, 2, 0,\n",
-       "       0, 2, 1, 1, 1, 2, 2, 2, 0, 1, 1, 1, 0, 0, 2, 0, 1, 2, 1, 2, 1, 1,\n",
-       "       2, 1, 2, 2, 2, 1, 1, 0, 2, 1, 2, 1, 2, 2, 0, 2, 0, 1, 0, 0, 0, 2,\n",
-       "       0, 2, 2, 2, 0, 2, 0, 0, 0, 2, 1, 0], dtype=int32)"
+       "array([1, 3, 0, 3, 1, 3, 0, 2, 2, 0, 0, 1, 1, 0, 0, 1, 1, 0, 1, 1, 0, 1,\n",
+       "       1, 0, 0, 0, 3, 1, 1, 1, 1, 2, 2, 1, 0, 0, 0, 0, 2, 3, 1, 0, 3, 0,\n",
+       "       0, 2, 1, 1, 1, 3, 2, 3, 0, 1, 1, 1, 0, 0, 3, 0, 1, 3, 1, 3, 1, 1,\n",
+       "       2, 1, 2, 3, 3, 1, 1, 0, 3, 1, 3, 1, 2, 3, 0, 3, 0, 1, 0, 0, 0, 2,\n",
+       "       0, 3, 3, 2, 0, 2, 0, 0, 0, 2, 1, 0], dtype=int32)"
       ]
      },
      "execution_count": 4,
@@ -81,7 +82,7 @@
     }
    ],
    "source": [
-    "kmeans = KMeans(n_clusters=3, random_state=42)\n",
+    "kmeans = KMeans(n_clusters=4, random_state=rstate)\n",
     "predicted = kmeans.fit_predict(X)\n",
     "predicted"
    ]
@@ -89,35 +90,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c634098a-6788-4886-b11e-437bf0d88660",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 0 ns, sys: 3 ms, total: 3 ms\n",
-      "Wall time: 2.21 ms\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.15222055031451376"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%time rs.c_index(X, predicted)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "id": "5e85b025-356a-438c-84e0-99be0049826e",
    "metadata": {},
    "outputs": [
@@ -125,29 +97,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.69 ms, sys: 198 μs, total: 1.89 ms\n",
-      "Wall time: 1.78 ms\n",
-      "Scikit score: davies_bouldin_score result: 0.21374667882527568\n",
-      "CPU times: user 1.85 ms, sys: 0 ns, total: 1.85 ms\n",
-      "Wall time: 2.07 ms\n",
-      "My score: c_index result: 0.15222055031451376\n",
+      "CPU times: user 2.27 ms, sys: 0 ns, total: 2.27 ms\n",
+      "Wall time: 2.09 ms\n",
+      "Scikit score: silhouette_score result: 0.6586325419766833\n",
+      "\n",
+      "CPU times: user 2.05 ms, sys: 0 ns, total: 2.05 ms\n",
+      "Wall time: 1.42 ms\n",
+      "My score: silhouette_score result: 0.6586325419766831\n",
+      "\n",
+      "\n",
+      "\n",
+      "CPU times: user 2.11 ms, sys: 0 ns, total: 2.11 ms\n",
+      "Wall time: 1.77 ms\n",
+      "Scikit score: davies_bouldin_score result: 0.7713306115661602\n",
+      "\n",
+      "CPU times: user 726 μs, sys: 0 ns, total: 726 μs\n",
+      "Wall time: 1.01 ms\n",
+      "My score: davies_bouldin_score result: 0.336984566204626\n",
+      "\n",
+      "\n",
+      "\n",
+      "CPU times: user 700 μs, sys: 0 ns, total: 700 μs\n",
+      "Wall time: 715 μs\n",
+      "Scikit score: calinski_harabasz_score result: 1315.649849421838\n",
+      "\n",
+      "CPU times: user 395 μs, sys: 0 ns, total: 395 μs\n",
+      "Wall time: 156 μs\n",
+      "My score: calinski_harabasz_score result: 1315.6498494218386\n",
+      "\n",
       "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "scikit_funcs = [davies_bouldin_score]\n",
-    "my_funcs = [rs.c_index]\n",
+    "scikit_funcs = [silhouette_score,davies_bouldin_score,calinski_harabasz_score]\n",
+    "my_funcs = [rs.silhouette_score,rs.davies_bouldin_score,rs.calinski_harabasz_score]\n",
     "for (func,my_func) in zip(scikit_funcs,my_funcs):\n",
     "    %time res2 = func(X, predicted)\n",
-    "    print(f\"Scikit score: {func.__name__} result: {res2}\")\n",
+    "    print(f\"Scikit score: {func.__name__} result: {res2}\\n\")\n",
     "         \n",
     "    %time res1 = my_func(X, predicted)\n",
-    "    print(f\"My score: {my_func.__name__} result: {res1}\")\n",
+    "    print(f\"My score: {my_func.__name__} result: {res1}\\n\")\n",
     "    \n",
     "    \n",
     "    print(\"\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3a972322-9e7a-4e0c-ba01-e8632d333366",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.013274013559299667"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#%time rs.c_index(X, predicted)\n",
+    "rs.c_index(X, predicted)"
    ]
   }
  ],
