--- a/main.ipynb
+++ b/main.ipynb
@@ -38,7 +38,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7491bd727770>"
+       "<matplotlib.collections.PathCollection at 0x72f337ff5c70>"
       ]
      },
      "execution_count": 3,
@@ -69,11 +69,11 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 3, 0, 3, 1, 3, 0, 2, 2, 0, 0, 1, 1, 0, 0, 1, 1, 0, 1, 1, 0, 1,\n",
-       "       1, 0, 0, 0, 3, 1, 1, 1, 1, 2, 2, 1, 0, 0, 0, 0, 2, 3, 1, 0, 3, 0,\n",
-       "       0, 2, 1, 1, 1, 3, 2, 3, 0, 1, 1, 1, 0, 0, 3, 0, 1, 3, 1, 3, 1, 1,\n",
-       "       2, 1, 2, 3, 3, 1, 1, 0, 3, 1, 3, 1, 2, 3, 0, 3, 0, 1, 0, 0, 0, 2,\n",
-       "       0, 3, 3, 2, 0, 2, 0, 0, 0, 2, 1, 0], dtype=int32)"
+       "array([1, 2, 0, 2, 1, 2, 0, 2, 2, 0, 0, 1, 1, 0, 0, 1, 1, 0, 1, 1, 0, 1,\n",
+       "       1, 0, 0, 0, 2, 1, 1, 1, 1, 2, 2, 1, 0, 0, 0, 0, 2, 2, 1, 0, 2, 0,\n",
+       "       0, 2, 1, 1, 1, 2, 2, 2, 0, 1, 1, 1, 0, 0, 2, 0, 1, 2, 1, 2, 1, 1,\n",
+       "       2, 1, 2, 2, 2, 1, 1, 0, 2, 1, 2, 1, 2, 2, 0, 2, 0, 1, 0, 0, 0, 2,\n",
+       "       0, 2, 2, 2, 0, 2, 0, 0, 0, 2, 1, 0], dtype=int32)"
       ]
      },
      "execution_count": 4,
@@ -82,7 +82,7 @@
     }
    ],
    "source": [
-    "kmeans = KMeans(n_clusters=4, random_state=rstate)\n",
+    "kmeans = KMeans(n_clusters=3, random_state=rstate)\n",
     "predicted = kmeans.fit_predict(X)\n",
     "predicted"
    ]
@@ -97,33 +97,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.27 ms, sys: 0 ns, total: 2.27 ms\n",
-      "Wall time: 2.09 ms\n",
-      "Scikit score: silhouette_score result: 0.6586325419766833\n",
+      "CPU times: user 1.66 ms, sys: 134 μs, total: 1.79 ms\n",
+      "Wall time: 1.56 ms\n",
+      "Scikit score: silhouette_score result: 0.8469881221532085\n",
       "\n",
-      "CPU times: user 2.05 ms, sys: 0 ns, total: 2.05 ms\n",
-      "Wall time: 1.42 ms\n",
-      "My score: silhouette_score result: 0.6586325419766831\n",
-      "\n",
-      "\n",
-      "\n",
-      "CPU times: user 2.11 ms, sys: 0 ns, total: 2.11 ms\n",
-      "Wall time: 1.77 ms\n",
-      "Scikit score: davies_bouldin_score result: 0.7713306115661602\n",
-      "\n",
-      "CPU times: user 726 μs, sys: 0 ns, total: 726 μs\n",
-      "Wall time: 1.01 ms\n",
-      "My score: davies_bouldin_score result: 0.336984566204626\n",
+      "CPU times: user 1.42 ms, sys: 0 ns, total: 1.42 ms\n",
+      "Wall time: 1.07 ms\n",
+      "My score: silhouette_score result: 0.8469881221532084\n",
       "\n",
       "\n",
       "\n",
-      "CPU times: user 700 μs, sys: 0 ns, total: 700 μs\n",
-      "Wall time: 715 μs\n",
-      "Scikit score: calinski_harabasz_score result: 1315.649849421838\n",
+      "CPU times: user 1.69 ms, sys: 28 μs, total: 1.72 ms\n",
+      "Wall time: 1.61 ms\n",
+      "Scikit score: davies_bouldin_score result: 0.21374667882527568\n",
       "\n",
-      "CPU times: user 395 μs, sys: 0 ns, total: 395 μs\n",
-      "Wall time: 156 μs\n",
-      "My score: calinski_harabasz_score result: 1315.6498494218386\n",
+      "CPU times: user 266 μs, sys: 21 μs, total: 287 μs\n",
+      "Wall time: 270 μs\n",
+      "My score: davies_bouldin_score result: 0.07981770856709126\n",
+      "\n",
+      "\n",
+      "\n",
+      "CPU times: user 975 μs, sys: 79 μs, total: 1.05 ms\n",
+      "Wall time: 884 μs\n",
+      "Scikit score: calinski_harabasz_score result: 1778.0880985088447\n",
+      "\n",
+      "CPU times: user 555 μs, sys: 45 μs, total: 600 μs\n",
+      "Wall time: 344 μs\n",
+      "My score: calinski_harabasz_score result: 1778.0880985088445\n",
       "\n",
       "\n",
       "\n"
@@ -151,9 +151,17 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 762 μs, sys: 61 μs, total: 823 μs\n",
+      "Wall time: 548 μs\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.013274013559299667"
+       "5.870004959225763e-17"
       ]
      },
      "execution_count": 6,
@@ -162,8 +170,36 @@
     }
    ],
    "source": [
-    "#%time rs.c_index(X, predicted)\n",
-    "rs.c_index(X, predicted)"
+    "%time rs.c_index(X, predicted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "110d9bcf-2028-4b13-be4a-95cc3534f138",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 22.5 ms, sys: 0 ns, total: 22.5 ms\n",
+      "Wall time: 23.7 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time rs.gamma_index(X, predicted)"
    ]
   }
  ],
