testing2: tau dunn sd indexes partialli implemented

--- a/main.ipynb
+++ b/main.ipynb
@@ -38,7 +38,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x72f337ff5c70>"
+       "<matplotlib.collections.PathCollection at 0x78659512a360>"
       ]
      },
      "execution_count": 3,
@@ -97,32 +97,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.66 ms, sys: 134 μs, total: 1.79 ms\n",
-      "Wall time: 1.56 ms\n",
+      "CPU times: user 2.33 ms, sys: 218 μs, total: 2.55 ms\n",
+      "Wall time: 2.46 ms\n",
       "Scikit score: silhouette_score result: 0.8469881221532085\n",
       "\n",
-      "CPU times: user 1.42 ms, sys: 0 ns, total: 1.42 ms\n",
-      "Wall time: 1.07 ms\n",
+      "CPU times: user 0 ns, sys: 1.9 ms, total: 1.9 ms\n",
+      "Wall time: 1.16 ms\n",
       "My score: silhouette_score result: 0.8469881221532084\n",
       "\n",
       "\n",
       "\n",
-      "CPU times: user 1.69 ms, sys: 28 μs, total: 1.72 ms\n",
-      "Wall time: 1.61 ms\n",
+      "CPU times: user 717 μs, sys: 789 μs, total: 1.51 ms\n",
+      "Wall time: 1.37 ms\n",
       "Scikit score: davies_bouldin_score result: 0.21374667882527568\n",
       "\n",
-      "CPU times: user 266 μs, sys: 21 μs, total: 287 μs\n",
-      "Wall time: 270 μs\n",
+      "CPU times: user 270 μs, sys: 0 ns, total: 270 μs\n",
+      "Wall time: 136 μs\n",
       "My score: davies_bouldin_score result: 0.07981770856709126\n",
       "\n",
       "\n",
       "\n",
-      "CPU times: user 975 μs, sys: 79 μs, total: 1.05 ms\n",
-      "Wall time: 884 μs\n",
+      "CPU times: user 627 μs, sys: 0 ns, total: 627 μs\n",
+      "Wall time: 595 μs\n",
       "Scikit score: calinski_harabasz_score result: 1778.0880985088447\n",
       "\n",
-      "CPU times: user 555 μs, sys: 45 μs, total: 600 μs\n",
-      "Wall time: 344 μs\n",
+      "CPU times: user 540 μs, sys: 0 ns, total: 540 μs\n",
+      "Wall time: 529 μs\n",
       "My score: calinski_harabasz_score result: 1778.0880985088445\n",
       "\n",
       "\n",
@@ -154,14 +154,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 762 μs, sys: 61 μs, total: 823 μs\n",
-      "Wall time: 548 μs\n"
+      "CPU times: user 982 μs, sys: 0 ns, total: 982 μs\n",
+      "Wall time: 1.2 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "5.870004959225763e-17"
+       "3.913336639483842e-17"
       ]
      },
      "execution_count": 6,
@@ -183,8 +183,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 22.5 ms, sys: 0 ns, total: 22.5 ms\n",
-      "Wall time: 23.7 ms\n"
+      "CPU times: user 22 ms, sys: 0 ns, total: 22 ms\n",
+      "Wall time: 22.1 ms\n"
      ]
     },
     {
@@ -200,6 +200,114 @@
    ],
    "source": [
     "%time rs.gamma_index(X, predicted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "90d4795d-c2fb-4272-8c6b-74f0094372fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 514 μs, sys: 0 ns, total: 514 μs\n",
+      "Wall time: 1.25 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "57.303661530192414"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time rs.ball_hall_index(X, predicted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e1c6060e-b924-41be-82ce-49d9fed9e954",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 19 ms, sys: 0 ns, total: 19 ms\n",
+      "Wall time: 19.1 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.03515321066075295"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time rs.tau_index(X, predicted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "fa569c23-a60f-4ce6-b24b-21d783391d59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 329 μs, sys: 31 μs, total: 360 μs\n",
+      "Wall time: 363 μs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.3200068371385423"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time rs.dunn_index(X, predicted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "395aa57f-fd81-49ad-90cb-bc0c21304faf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.36455911836433896, 0.1744660125692073)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rs.sd_index(X, predicted)"
    ]
   }
  ],
