--- a/main.ipynb
+++ b/main.ipynb
@@ -38,7 +38,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x78659512a360>"
+       "<matplotlib.collections.PathCollection at 0x7714deca1be0>"
       ]
      },
      "execution_count": 3,
@@ -97,32 +97,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.33 ms, sys: 218 μs, total: 2.55 ms\n",
-      "Wall time: 2.46 ms\n",
+      "CPU times: user 1.92 ms, sys: 237 μs, total: 2.16 ms\n",
+      "Wall time: 1.66 ms\n",
       "Scikit score: silhouette_score result: 0.8469881221532085\n",
       "\n",
-      "CPU times: user 0 ns, sys: 1.9 ms, total: 1.9 ms\n",
-      "Wall time: 1.16 ms\n",
+      "CPU times: user 0 ns, sys: 2.04 ms, total: 2.04 ms\n",
+      "Wall time: 1.18 ms\n",
       "My score: silhouette_score result: 0.8469881221532084\n",
       "\n",
       "\n",
       "\n",
-      "CPU times: user 717 μs, sys: 789 μs, total: 1.51 ms\n",
+      "CPU times: user 0 ns, sys: 1.65 ms, total: 1.65 ms\n",
       "Wall time: 1.37 ms\n",
       "Scikit score: davies_bouldin_score result: 0.21374667882527568\n",
       "\n",
-      "CPU times: user 270 μs, sys: 0 ns, total: 270 μs\n",
-      "Wall time: 136 μs\n",
+      "CPU times: user 0 ns, sys: 515 μs, total: 515 μs\n",
+      "Wall time: 199 μs\n",
       "My score: davies_bouldin_score result: 0.07981770856709126\n",
       "\n",
       "\n",
       "\n",
-      "CPU times: user 627 μs, sys: 0 ns, total: 627 μs\n",
-      "Wall time: 595 μs\n",
+      "CPU times: user 0 ns, sys: 696 μs, total: 696 μs\n",
+      "Wall time: 568 μs\n",
       "Scikit score: calinski_harabasz_score result: 1778.0880985088447\n",
       "\n",
-      "CPU times: user 540 μs, sys: 0 ns, total: 540 μs\n",
-      "Wall time: 529 μs\n",
+      "CPU times: user 288 μs, sys: 37 μs, total: 325 μs\n",
+      "Wall time: 142 μs\n",
       "My score: calinski_harabasz_score result: 1778.0880985088445\n",
       "\n",
       "\n",
@@ -154,8 +154,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 982 μs, sys: 0 ns, total: 982 μs\n",
-      "Wall time: 1.2 ms\n"
+      "CPU times: user 891 μs, sys: 88 μs, total: 979 μs\n",
+      "Wall time: 1.64 ms\n"
      ]
     },
     {
@@ -183,8 +183,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 22 ms, sys: 0 ns, total: 22 ms\n",
-      "Wall time: 22.1 ms\n"
+      "CPU times: user 21.8 ms, sys: 0 ns, total: 21.8 ms\n",
+      "Wall time: 21.9 ms\n"
      ]
     },
     {
@@ -212,8 +212,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 514 μs, sys: 0 ns, total: 514 μs\n",
-      "Wall time: 1.25 ms\n"
+      "CPU times: user 450 μs, sys: 56 μs, total: 506 μs\n",
+      "Wall time: 1.17 ms\n"
      ]
     },
     {
@@ -241,8 +241,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 19 ms, sys: 0 ns, total: 19 ms\n",
-      "Wall time: 19.1 ms\n"
+      "CPU times: user 19.5 ms, sys: 0 ns, total: 19.5 ms\n",
+      "Wall time: 19.6 ms\n"
      ]
     },
     {
@@ -270,8 +270,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 329 μs, sys: 31 μs, total: 360 μs\n",
-      "Wall time: 363 μs\n"
+      "CPU times: user 218 μs, sys: 29 μs, total: 247 μs\n",
+      "Wall time: 249 μs\n"
      ]
     },
     {
